# RecipeBox

./: .gitignore  db.sqlite3  pyproject.toml
box/: admin.py  forms.py  models.py  urls.py  views.py
box/migrations/: 0001_initial.py  0002_chef.py  0003_delete_chef.py
box/templates/: addauthorform.html  author_detail.html  fav.html  generic_form.html  index.html  recipe_detail.html  recipe_list.html  recipeaddform.html
box/templates/box/: recipe_form.html
recipebox/: settings.py  urls.py
recipebox.egg-info/: PKG-INFO
recipebox/migrations/: 0001_initial.py
