[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = ""
authors = ["AlvaradoM <mauriciomj11@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.2"
django = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
